--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 <h1>CHI FU MI</h1>
 <div id="jeu">
+    <div id="choice">
+        <button id="cissor"><i class="far fa-hand-scissors"></i></button>
+        <button id="rock"><i class="far fa-hand-rock"></i></button>
+        <button id="papper"><i class="far fa-hand-paper"></i></button>
+    </div>
     <div id="joueur1">
 
     </div>
@@ -21,11 +26,12 @@
 
     </div>
 
+
 </div>
 
 <button>Reset</button>
 
-
+<script src="https://kit.fontawesome.com/d8438e7f2f.js" crossorigin="anonymous"></script>
 <script src="app.js"></script>
 </body>
 </html>
