--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
     </div>
     <div id="score">
-        <h2 id="victory">zfsdfs</h2>
-        <h2 id="defeat">fsfsfsqqqqz</h2>
+        <h2 id="victory">Victoires : </h2>
+        <h2 id="defeat">Defaites :</h2>
+        <h1 id="resultat"></h1>
     </div>
     <div id="joueur2">
 
