--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h1>CHI FU MI</h1>
 <div id="jeu">
     <div id="choice">
-        <button id="cissor"><i class="far fa-hand-scissors"></i></button>
-        <button id="rock"><i class="far fa-hand-rock"></i></button>
-        <button id="papper"><i class="far fa-hand-paper"></i></button>
+        <button id="cissor"><i id="icone1" class="far fa-hand-scissors"></i></button>
+        <button id="rock"><i id="icone2" class="far fa-hand-rock"></i></button>
+        <button id="papper"><i id="icone3" class="far fa-hand-paper"></i></button>
     </div>
     <div id="joueur1">
 
