--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 <body>
 <h1>CHI FU MI</h1>
 <div id="jeu">
-    <div id="choice">
-        <button id="rock"><i id="icone2" class="far fa-hand-rock"></i></button>
-        <button id="papper"><i id="icone3" class="far fa-hand-paper"></i></button>
-        <button id="cissor"><i id="icone1" class="far fa-hand-scissors"></i></button>
-    </div>
+
     <div id="joueur1">
 
     </div>
@@ -27,10 +23,20 @@
 
     </div>
 
+    <div id="choice">
+        <button id="rock"><i id="icone2" class="far fa-hand-rock"></i></button>
+        <button id="papper"><i id="icone3" class="far fa-hand-paper"></i></button>
+        <button id="cissor"><i id="icone1" class="far fa-hand-scissors"></i></button>
+    </div>
+
+    <div id="win">
+
+    </div>
+
 
 </div>
 
-<button>Reset</button>
+<button id="reset"><a href="index.html">Recommencer</a></button>
 
 <script src="https://kit.fontawesome.com/d8438e7f2f.js" crossorigin="anonymous"></script>
 <script src="app.js"></script>
