--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-<h1>CHI FU MI</h1>
+<div id="titre">
+    <h1>CHI-FU-MI</h1>
+</div>
 <div id="jeu">
 
     <div id="joueur1">
@@ -24,9 +26,9 @@
     </div>
 
     <div id="choice">
-        <button id="rock"><i id="icone2" class="far fa-hand-rock"></i></button>
-        <button id="papper"><i id="icone3" class="far fa-hand-paper"></i></button>
-        <button id="cissor"><i id="icone1" class="far fa-hand-scissors"></i></button>
+        <button id="rock">Pierre<i id="icone2" class="far fa-hand-rock"></i></button>
+        <button id="papper">papier<i id="icone3" class="far fa-hand-paper"></i></button>
+        <button id="cissor">ciseaux<i id="icone1" class="far fa-hand-scissors"></i></button>
     </div>
 
     <div id="win">
